<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/person_list_main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ru.relastic.customviewlibrary.meet022customview.ButtonWA
            android:id="@+id/person_button_top1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:tag="top1"
            app:annotation_source="@string/annotation_settings"
            app:back_color="@color/background"
            app:front_color="@color/primary_light"
            app:image_source="@drawable/ic_perm_data_setting_black_48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ru.relastic.customviewlibrary.meet022customview.ButtonWA
            android:id="@+id/person_button_top2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="top2"
            app:annotation_source="@string/annotation_create_person"
            app:back_color="@color/background"
            app:front_color="@color/colorPrimary"
            app:image_source="@drawable/ic_person_add_solid_black_48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ru.relastic.customviewlibrary.meet022customview.ButtonWA
            android:id="@+id/person_button_top3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:tag="top3"
            app:annotation_source="@string/annotation_to_schedule"
            app:back_color="@color/background"
            app:front_color="@color/primary_light"
            app:image_source="@drawable/ic_to_schedule"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/divider"
        android:paddingTop="1dp"
        android:paddingBottom="1dp"
        app:layout_constraintBottom_toTopOf="@+id/alignLayout1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:id="@+id/person_container1"
            android:layout_width="match_parent"
            android:layout_height="@android:dimen/app_icon_size"
            android:orientation="vertical" />
    </ScrollView>

    <ru.relastic.customviewlibrary.meet023customviewgroup.AlignLayout
        android:id="@+id/alignLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ru.relastic.customviewlibrary.meet022customview.ButtonWA
            android:id="@+id/person_button_bottom1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="bottom1"
            app:annotation_source="@string/annotation_all_clients"
            app:back_color="@color/background"
            app:front_color="@color/colorPrimary"
            app:image_source="@drawable/ic_people_black_48dp" />

        <ru.relastic.customviewlibrary.meet022customview.ButtonWA
            android:id="@+id/person_button_bottom2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="bottom2"
            app:annotation_source="@string/annotation_notified_clients"
            app:back_color="@color/background"
            app:front_color="@color/colorPrimary"
            app:image_source="@drawable/ic_notifies" />

        <ru.relastic.customviewlibrary.meet022customview.ButtonWA
            android:id="@+id/person_button_bottom3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="bottom3"
            app:annotation_source="@string/annotation_unknown_calls"
            app:back_color="@color/background"
            app:front_color="@color/colorPrimary"
            app:image_source="@drawable/ic_unknown" />
    </ru.relastic.customviewlibrary.meet023customviewgroup.AlignLayout>

</android.support.constraint.ConstraintLayout>